visibility issue

--- a/style.css
+++ b/style.css
@@ -8,3 +8,7 @@
   margin-right: 20px;
   font-family: 'Shadows Into Light', cursive;
 }
+
+.visibility {
+  visibility: hidden;
+}
